[package]
name = "homely-ws-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
async-ctrlc = "1.2.0"
anyhow = "1.0.65"
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "3.2.21", features = ["derive"] }
rust_socketio = "0.3.1"
reqwest = { version = "0.11.11", features = ["json", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
